@@ -1,6 +1,12 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
 
+*portage-1.8.9_pre13 (22 Feb 2002)
+
+  22 Feb 2002; Daniel Robbins <drobbins@gentoo.org> various: fix /bin/sh
+  symlink merge problems and massively simplified movefile() code.  Added back
+  some emerge code so that "emerge --search rsync" doesn't run rsync.
+
 *portage 1.8.9_pre12 (22 Feb 2002)
 
   22 Feb 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: everything
